Archive2/b6/8732e4d7254932/output
main.cpp:13:13: error: redefinition of 'begin'
char const* begin(X const&)   { return data; }
            ^
main.cpp:9:24: note: previous definition is here
    friend char const* begin(X const&)   { return data; }
                       ^
main.cpp:14:13: error: redefinition of 'end'
char const* end  (X const& x) { return data + sizeof(data); }
            ^
main.cpp:10:24: note: previous definition is here
    friend char const* end  (X const& x) { return data + sizeof(data); }
                       ^
2 errors generated.
